# mcp-gateway

./: .gitignore  README.md  alembic.ini  foo.py  pyproject.toml
.cursor/rules/: large-changes.mdc  logging-feature.mdc  main.mdc
alembic/: env.py
alembic/versions/: 7a050037f451_add_bridge_logs_table.py  7ef5e3033b31_add_last_connected_to_app_ids.py  cc782dc241c1_add_app_type_field.py
docs/: auth.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  env.d.ts
frontend/src/api/: auth.ts  logs.ts
frontend/src/components/: AppShell.tsx  LogViewer.tsx  ProtectedRoute.tsx  StatusBar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Agents.tsx  Apps.tsx  Dashboard.tsx  Keys.tsx  Login.tsx  Overview.tsx  ToolProviders.tsx
frontend/tests/: agents.spec.ts  tool-providers.spec.ts
scripts/: build_frontend.py
src/mcp_gateway/: __init__.py  cli.py  json_rpc.py  main.py  mcp_server.py  settings.py
src/mcp_gateway/api/: admin_auth.py  auth.py  bridge.py  health.py
src/mcp_gateway/core/: bridge.py  logging.py  utils.py
src/mcp_gateway/models/: auth.py  base.py
src/mcp_gateway/schemas/: admin.py  auth.py
src/mcp_gateway/services/: auth.py
src/mcp_gateway/tools/: __init__.py  base.py  minimal_tool.py  registry.py  system_info.py
tests/: test_bridge.py  test_logging.py
