[project]
name = "mcp-gateway"
version = "0.1.0"
description = "MCP Gateway Server - Tool and Agent Management Gateway"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.4.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "jsonrpc>=1.2.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mcp-gateway = "mcp_gateway.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.build]
includes = ["src/mcp_gateway/static/**/*"]
run-before = { build = "python scripts/build_frontend.py" }

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.3",
]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []
line-length = 100

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true 